--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1 class='well'>users#index</h1>
-<%= link_to '<span class="glyphicon glyphicon-menu-down"></span> index'.html_safe, users_path, class: 'btn btn-xs btn-default' %> 
+<%= link_to '<span class="fa fa-bath"></span> index'.html_safe, users_path, class: 'btn btn-xs btn-default' %> 
 <!-- Single button -->
 <div class="btn-group">
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
