user validations added and partial for error messages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
 <h1>users#show</h1>
+<p><b>Fullname:</b> <%= @user.fullname %> </p><br />
+<p><b>Email:</b> <%= @user.email %> </p><br />
+<p><b>created:</b> <%= @user.created_at %> </p><br />
