--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,23 @@
-<h1 class='well'>users#index</h1>
-<%= link_to '<span class="fa fa-bath"></span> index'.html_safe, users_path, class: 'btn btn-xs btn-default' %> 
-<!-- Single button -->
-<div class="btn-group">
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Action <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
-</div>
+<h1>users#index</h1>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Fullname</th>
+      <th>Email</th>
+      <th>Created at</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td> <%= user.fullname %> </td>
+        <td> <%= user.email %> </td>
+        <td> <%= user.created_at %> </td>
+        <td> <%= link_to "Edit", edit_user_path(user) %> 
+        <%= link_to "Delete", user_path(user), method: 'delete' %> </td>
+      </tr>
+    <% end %> 
+  </tbody>
+</table>
+
