--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%# <% end %1> %>
 
     <%= gflash %> 
-    <%= logout_link session[:current_moderator] %> 
+    <%= logout_link %> 
 
     <%= yield %>
 
