--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,8 @@
 <%# <%= render 'application_partials/validation_errors', object: @user %1> %> 
 <%= simple_form_for @user, html: {class: 'from-horizontal'} do |f| %>
 
-  <%= f.input :first_name %> 
-  <%= f.input :last_name %> 
+  <%= f.input :first_name if current_moderator.owner? %> 
+  <%= f.input :last_name if current_moderator.owner? %> 
   <%= f.input :email %> 
   <%= f.input :password %> 
 
