--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,8 @@
         <td> <%= user.email %> </td>
         <td> <%= user.created_at %> </td>
         <td> <%= link_to "Edit", edit_user_path(user) %> 
-        <%= link_to "Delete", user_path(user), method: 'delete' %> </td>
+        <%=  link_to "Delete", user_path(user), method: 'delete' if current_moderator.owner? %> 
+        </td>
       </tr>
     <% end %> 
   </tbody>
