--- a/app/views/volunteers/_form.html.erb
+++ b/app/views/volunteers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@volunteer) do |f| %>
+<%= simple_form_for @volunteer, html: {class: 'form-horizontal'} do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -9,7 +9,7 @@
     <%= f.input :phone2 %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-group">
     <%= f.button :submit %>
   </div>
 <% end %>
