volunteers form updated for assigning to groups delete constraint for volunteers group added - cant delete non empty group view show volunteers group updated to show all memebers

--- a/app/views/volunteers_groups/show.html.erb
+++ b/app/views/volunteers_groups/show.html.erb
@@ -10,5 +10,14 @@
   <%= @volunteers_group.description %>
 </p>
 
+<p>
+  <strong>Members:</strong>
+</p>
+<ul>
+  <% @members.each do |member| %>
+    <li> <%= member.fullname %> </li>
+  <% end %> 
+</ul>
+
 <%= link_to 'Edit', edit_volunteers_group_path(@volunteers_group) %> |
 <%= link_to 'Back', volunteers_groups_path %>
