--- a/app/views/volunteers/_form.html.erb
+++ b/app/views/volunteers/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :email %>
     <%= f.input :phone1 %>
     <%= f.input :phone2 %>
+    <%= f.association :volunteers_groups, as: :check_boxes %>
   </div>
 
   <div class="form-group">
