--- a/app/views/volunteers/show.html.erb
+++ b/app/views/volunteers/show.html.erb
@@ -1,29 +1,38 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>First name:</strong>
-  <%= @volunteer.first_name %>
+<strong>First name:</strong>
+<%= @volunteer.first_name %>
 </p>
 
 <p>
-  <strong>Last name:</strong>
-  <%= @volunteer.last_name %>
+<strong>Last name:</strong>
+<%= @volunteer.last_name %>
 </p>
 
 <p>
-  <strong>Email:</strong>
-  <%= @volunteer.email %>
+<strong>Email:</strong>
+<%= @volunteer.email %>
 </p>
 
 <p>
-  <strong>Phone1:</strong>
-  <%= @volunteer.phone1 %>
+<strong>Phone1:</strong>
+<%= @volunteer.phone1 %>
 </p>
 
 <p>
-  <strong>Phone2:</strong>
-  <%= @volunteer.phone2 %>
+<strong>Phone2:</strong>
+<%= @volunteer.phone2 %>
 </p>
+
+<strong>Groups:</strong>
+<ul>
+  <% @membership.each do |mb| %> 
+    <li>
+      <%= mb.name %> 
+    </li>
+  <% end %>
+</ul>
 
 <%= link_to 'Edit', edit_volunteer_path(@volunteer) %> |
 <%= link_to 'Back', volunteers_path %>
