--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Volunteers</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>First name</th>
@@ -10,7 +10,7 @@
       <th>Email</th>
       <th>Phone1</th>
       <th>Phone2</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -22,7 +22,7 @@
         <td><%= volunteer.email %></td>
         <td><%= volunteer.phone1 %></td>
         <td><%= volunteer.phone2 %></td>
-        <td><%= link_to 'Show', volunteer %></td>
+        <td><%= link_to 'Show', volunteer, remote: true %></td>
         <td><%= link_to 'Edit', edit_volunteer_path(volunteer) %></td>
         <td><%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
