--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,3 @@
-<%# <%= render 'application_partials/validation_errors', object: @user %1> %> 
 <%= simple_form_for @user, html: {class: 'from-horizontal'} do |f| %>
   <%= f.error_notification %>
 
@@ -7,23 +6,7 @@
   <%= f.input :email %> 
   <%= f.input :password %> 
 
-
-  <%# <div class="form-group"> %>
-  <%#   <%= f.label :first_name %1> %> 
-  <%#   <%= f.text_field :first_name, class: 'form-control' %1> %> 
-  <%# </div> %>
-  <%# <div class="form-group"> %>
-  <%#   <%= f.label :last_name %1> %> 
-  <%#   <%= f.text_field :last_name, class: 'form-control' %1> %> 
-  <%# </div> %>
-  <%# <div class="form-group"> %>
-  <%#   <%= f.label :email %1> %> 
-  <%#   <%= f.text_field :email, class: 'form-control' %1> %> 
-  <%# </div> %>
-  <%# <div class="form-group"> %>
-  <%#   <%= f.label :password %1> %> 
-  <%#   <%= f.text_field :password, class: 'form-control' %1> %> 
-  <%# </div> %>
+  <%= render "application_partials/location_form", f: f  %>
 
   <div class="form-group">
     <%= f.submit class: 'btn btn-default' %> 
