--- a/app/views/volunteers/_form.html.erb
+++ b/app/views/volunteers/_form.html.erb
@@ -7,6 +7,9 @@
     <%= f.input :email %>
     <%= f.input :phone1 %>
     <%= f.input :phone2 %>
+    
+    <%= render "application_partials/location_form", f: f  %>
+    
     <%= f.association :volunteers_groups, as: :check_boxes %>
   </div>
 
