--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -11,6 +11,7 @@
       <th>Phone1</th>
       <th>Phone2</th>
       <th>Address</th>
+      <th colspan="2">Coordinates</th>
       <th colspan="3">Actions</th>
     </tr>
   </thead>
@@ -23,7 +24,9 @@
         <td><%= volunteer.email %></td>
         <td><%= volunteer.phone1 %></td>
         <td><%= volunteer.phone2 %></td>
-        <td><%= volunteer.locations.first.full_street_address %></td>
+        <td><%= volunteer.location.full_street_address %></td>
+        <td><%= volunteer.location.latitude %></td>
+        <td><%= volunteer.location.longitude %></td>
         <td><%= link_to 'Show', volunteer, remote: true %></td>
         <td><%= link_to 'Edit', edit_volunteer_path(volunteer) %></td>
         <td><%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
