--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,33 +1,36 @@
-<h1>users#index</h1>
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th>Fullname</th>
-      <th>Email</th>
-      <th>Created at</th>
-      <th>Address</th>
-      <th colspan="2" >Coordinates</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td> <%= user.fullname %> </td>
-        <td> <%= user.email %> </td>
-        <td> <%= user.created_at %> </td>
-        <td> <%= user.location.full_street_address %> </td>
-        <td> <%= user.location.latitude %> </td>
-        <td> <%= user.location.longitude %> </td>
-        <td> <%= link_to "Edit", edit_user_path(user) %> 
-        <% unless user.owner? %>
-          <%=  link_to "Delete", user_path(user), method: 'delete' if current_moderator.owner? %> 
+<h3><i class="fa fa-angle-right"></i> users#index</h3>
+<div class="row mt">
+  <div class="col-lg-12">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Fullname</th>
+          <th>Email</th>
+          <th>Created at</th>
+          <th>Address</th>
+          <th colspan="2" >Coordinates</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td> <%= user.fullname %> </td>
+            <td> <%= user.email %> </td>
+            <td> <%= user.created_at %> </td>
+            <td> <%= user.location.full_street_address %> </td>
+            <td> <%= user.location.latitude %> </td>
+            <td> <%= user.location.longitude %> </td>
+            <td> <%= link_to "Edit", edit_user_path(user) %> 
+            <% unless user.owner? %>
+              <%=  link_to "Delete", user_path(user), method: 'delete' if current_moderator.owner? %> 
+            <% end %> 
+            </td>
+          </tr>
         <% end %> 
-        </td>
-      </tr>
-    <% end %> 
-  </tbody>
-</table>
-<br />
-<%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
-
+      </tbody>
+    </table>
+    <br />
+    <%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
+    </div>
+</div>
