--- a/app/assets/stylesheets/style-theme.sass
+++ b/app/assets/stylesheets/style-theme.sass
@@ -1,9 +1,3 @@
-/*
- *Template Name: DASHGUM FREE - Bootstrap 3.2 Admin Theme
- *Template Version: 1.0
- *Author: Carlos Alvarez
- *Website: http://blacktie.co
- *Premium: http://www.gridgum.com
 
 /* Import fonts
 @import url(http://fonts.googleapis.com/css?family=Ruda:400,700,900)
@@ -11,8 +5,8 @@
 /* BASIC THEME CONFIGURATION
 
 body
-  color: #797979
-  background: #f2f2f2
+  color: $typo-dark 
+  background: $typo-light 
   font-family: 'Ruda', sans-serif
   padding: 0px !important
   margin: 0px !important
@@ -30,7 +24,7 @@ a
     outline: none
 
 \::selection, ::-moz-selection
-  background: #68dff0
+  background: $turq
   color: #fff
 
 #container
@@ -40,7 +34,7 @@ a
 /* Bootstrap Modifications
 
 .modal-header
-  background: #68dff0
+  background: $turq
 
 .modal-title
   color: white
@@ -64,7 +58,7 @@ a
 /*Theme Backgrounds
 
 .bg-theme
-  background-color: #68dff0
+  background-color: $turq
 
 .bg-theme02
   background-color: #ac92ec
@@ -79,7 +73,7 @@ a
 
 .btn-theme
   color: #fff
-  background-color: #68dff0
+  background-color: $turq
   border-color: #48bcb4
 
   &:hover, &:focus, &:active, &.active
@@ -149,7 +143,7 @@ hr
   margin-top: 20px
   margin-bottom: 20px
   border: 0
-  border-top: 1px solid #797979
+  border-top: 1px solid $typo-dark
 
 /*Helpers
 
@@ -180,18 +174,20 @@ hr
 /*Exclusive Theme Colors Configuration
 
 .label-theme, .bg-theme
-  background-color: #68dff0
+  background-color: $turq
 
 ul.top-menu > li > .logout
-  color: #f2f2f2
+  color: $typo-light
   font-size: 12px
-  border-radius: 4px
-  -webkit-border-radius: 4px
+  +border-radius
   border: 1px solid #64c3c2 !important
   padding: 5px 15px
   margin-right: 15px
-  background: #68dff0
+  background: $turq
   margin-top: 15px
+  &:hover
+    +border-radius
+
 
 /*sidebar navigation
 
@@ -199,10 +195,10 @@ ul.top-menu > li > .logout
   width: 210px
   height: 100%
   position: fixed
-  background: #424a5d
+  background: $gray-dark
 
   h5
-    color: #f2f2f2
+    color: $typo-light
     font-weight: 700
 
   ul li
@@ -258,7 +254,7 @@ ul.sidebar-menu
 
 ul.sidebar-menu li
   ul.sub li
-    background: #424a5d
+    background: $gray-dark
     margin-bottom: 0
     margin-left: 0
     margin-right: 0
@@ -277,14 +273,14 @@ ul.sidebar-menu li
       -o-transition: all 0.3s ease
       -ms-transition: all 0.3s ease
       transition: all 0.3s ease
-      color: #aeb2b7
+      color: $gray-mid
 
       &:hover
         color: white
         background: transparent
 
     &.active a
-      color: #68dff0
+      color: $turq
       -webkit-transition: all 0.3s ease
       -moz-transition: all 0.3s ease
       -o-transition: all 0.3s ease
@@ -304,7 +300,7 @@ ul.sidebar-menu li
     span
       display: inline-block
 
-    color: #aeb2b7
+    color: $gray-mid
     text-decoration: none
     display: block
     padding: 15px 0 15px 10px
@@ -317,7 +313,7 @@ ul.sidebar-menu li
     transition: all 0.3s ease
 
     &.active, &:hover, &:focus
-      background: #68dff0
+      background: $turq
       color: #fff
       display: block
       -webkit-transition: all 0.3s ease
@@ -357,8 +353,8 @@ ul.sidebar-menu li
   z-index: 1002
 
 .black-bg
-  background: #ffd777
-  border-bottom: 1px solid #c9aa5f
+  background: $yell-light
+  border-bottom: 1px solid $yell-dark
 
 .wrapper
   display: inline-block
@@ -384,7 +380,7 @@ a.logo
     outline: none
 
   span
-    color: #68dff0
+    color: $turq
 
 /*notification
 
@@ -405,8 +401,7 @@ a.logo
 ul.top-menu > li > a
   color: #666666
   font-size: 16px
-  border-radius: 4px
-  -webkit-border-radius: 4px
+  +border-radius
   border: 1px solid #666666 !important
   padding: 2px 6px
   margin-right: 15px
@@ -416,8 +411,7 @@ ul.top-menu > li > a
     background-color: transparent !important
     border-color: #b6b6b6 !important
     text-decoration: none
-    border-radius: 4px
-    -webkit-border-radius: 4px
+    +border-radius
     color: #b6b6b6 !important
 
 .notify-row .badge
@@ -448,7 +442,7 @@ ul.top-menu > li > a
         -webkit-border-radius: 4px 4px 0px 0px
 
         &.green
-          background-color: #68dff0
+          background-color: $turq
           color: #fff
 
         &.yellow
@@ -631,9 +625,9 @@ ul.top-menu > li > a
   border-top-color: #FCB322 !important
 
 .notify-arrow-green
-  border-color: transparent transparent #68dff0
-  border-bottom-color: #68dff0 !important
-  border-top-color: #68dff0 !important
+  border-color: transparent transparent $turq
+  border-bottom-color: $turq !important
+  border-top-color: $turq !important
 
 /*--sidebar toggle---
 
@@ -688,7 +682,7 @@ ul.top-menu > li > a
     width: 100%
 
     &:hover
-      background: #f2f2f2
+      background: $typo-light
 
   .thumb
     width: 30px
@@ -710,7 +704,7 @@ ul.top-menu > li > a
     color: #666666
 
   a
-    color: #68dff0
+    color: $turq
 
 /* LINE ICONS CONFIGURATION
 
@@ -737,7 +731,7 @@ ul.top-menu > li > a
   p
     text-align: center
     font-size: 12px
-    color: #f2f2f2
+    color: $typo-light
 
   &:hover
     p
@@ -792,7 +786,7 @@ ul.top-menu > li > a
       position: absolute
       bottom: 0
       background: #ff865c
-      color: #68dff0
+      color: $turq
       width: 100%
       -webkit-border-radius: 5px 5px 0 0
       -moz-border-radius: 5px 5px 0 0
@@ -895,7 +889,7 @@ ul.top-menu > li > a
     margin-bottom: 15px
 
   h1
-    color: #f2f2f2
+    color: $typo-light
 
   h5
     font-weight: 200
@@ -914,7 +908,7 @@ ul.top-menu > li > a
 
 .green-panel
   text-align: center
-  background: #68dff0
+  background: $turq
 
   .green-header
     background: #43b1a9
@@ -956,7 +950,7 @@ ul.top-menu > li > a
     color: #ccd1d9
 
   i
-    color: #68dff0
+    color: $turq
     padding-right: 4px
     font-size: 14px
 
@@ -1000,7 +994,7 @@ ul.top-menu > li > a
   .summary
     color: #2f2f2f
     display: block
-    background: #f2f2f2
+    background: $typo-light
     padding: 10px
     text-align: center
 
@@ -1087,7 +1081,7 @@ ul.top-menu > li > a
     font-weight: 900
 
   .info
-    background: #f2f2f2
+    background: $typo-light
 
     i
       font-size: 15px
@@ -1368,7 +1362,7 @@ ul.top-menu > li > a
     font-weight: 900
 
 .profile-01
-  background: #68dff0
+  background: $turq
   height: 50px
 
   &:hover
@@ -1417,7 +1411,7 @@ ul.top-menu > li > a
     color: #cdcdcd
 
     &:hover
-      color: #68dff0
+      color: $turq
 
   i
     margin-top: 15px
@@ -1462,7 +1456,7 @@ ul.top-menu > li > a
 
   &.terques-chart
     background: transparent
-    color: #797979
+    color: $typo-dark
 
     .chart-tittle
       .value
@@ -1474,7 +1468,7 @@ ul.top-menu > li > a
           font-size: 12px
 
           &:hover, &.active
-            color: #68dff0
+            color: $turq
             font-size: 12px
 
       font-size: 16px
@@ -1512,10 +1506,10 @@ ul.top-menu > li > a
   border-top: 1px solid #ccc
 
 .fc-state-default
-  background: #f2f2f2
+  background: $typo-light
 
   .fc-button-inner
-    background: #f2f2f2
+    background: $typo-light
 
 .fc-state-active .fc-button-inner
   background: #FFFFFF
@@ -1526,7 +1520,7 @@ ul.top-menu > li > a
   display: block
   position: relative
   overflow: hidden
-  background-color: #68dff0
+  background-color: $turq
   -webkit-transition: background-color 0.4s
   -moz-transition: background-color 0.4s
   -o-transition: background-color 0.4s
@@ -1546,7 +1540,7 @@ ul.top-menu > li > a
 
   &:hover
     .photo-wrapper
-      background-color: #68dff0
+      background-color: $turq
       background-image: url(../img/zoom.png)
       background-repeat: no-repeat
       background-position: center
@@ -1775,7 +1769,7 @@ label
     margin: 0
     padding: 25px 20px
     text-align: center
-    background: #68dff0
+    background: $turq
     border-radius: 5px 5px 0 0
     -webkit-border-radius: 5px 5px 0 0
     color: #fff
@@ -1820,7 +1814,7 @@ label
 
   .modal-content
     position: relative
-    background-color: #f2f2f2
+    background-color: $typo-light
     background-clip: padding-box
     border: 1px solid #999
     border: 1px solid rgba(0, 0, 0, 0.2)
@@ -1905,7 +1899,7 @@ label
     height: 10px
 
   .decrease
-    background: #f2f2f2
+    background: $typo-light
     width: 10px
     height: 10px
 
@@ -1952,7 +1946,7 @@ label
         padding: 14px 15px
         text-align: center
         border-right: 1px solid #d5d8df
-        color: #797979
+        color: $typo-dark
 
         &:hover
           background: #fff
@@ -2041,7 +2035,7 @@ label
 /*footer
 
 .site-footer
-  background: #68dff0
+  background: $turq
   color: #fff
   padding: 10px 0
 
