--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h3><i class="fa fa-angle-right"></i> users#index</h3>
 <div class="row mt">
   <div class="col-lg-12">
-    <table class="table table-striped table-hover">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th>Fullname</th>
