--- a/app/views/clients/_show.html.erb
+++ b/app/views/clients/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="volunteerShowModal">
+<div class="modal fade" id="clientShowModal">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-body">
@@ -7,7 +7,7 @@
             <div class="containter">
               <div class="row">
                 <div class="col-sm-12">
-                  <button type="button" class="closeVolunteer close">x</button>
+                  <button type="button" class="closeClientShowModal close">x</button>
                 </div>
               </div>
               <br />
@@ -18,56 +18,54 @@
 
                   <p>
                   <strong>First name:</strong>
-                  <%= @volunteer.first_name %>
+                  <%= @client.first_name %>
                   </p>
 
                   <p>
                   <strong>Last name:</strong>
-                  <%= @volunteer.last_name %>
+                  <%= @client.last_name %>
                   </p>
 
                   <p>
                   <strong>Email:</strong>
-                  <%= @volunteer.email %>
+                  <%= @client.email %>
                   </p>
 
                   <p>
                   <strong>Phone1:</strong>
-                  <%= @volunteer.phone1 %>
+                  <%= @client.phone1 %>
                   </p>
 
                   <p>
                   <strong>Phone2:</strong>
-                  <%= @volunteer.phone2 %>
+                  <%= @client.phone2 %>
                   </p>
 
                   <p>
                   <strong>Address:</strong>
-                  <%= @volunteer.location.full_street_address %>
+                  <%= @client.location.full_street_address %>
                   </p>
                   <strong>Coordinates:</strong>
-                  <%= @volunteer.location.latitude %>
-                  <%= @volunteer.location.longitude %>
+                  <%= @client.location.latitude %>
+                  <%= @client.location.longitude %>
                   </p>
 
-                  <strong>Groups:</strong>
-                  <ul>
-                    <% @membership.each do |mb| %> 
-                      <li>
-                        <%= mb.name %> 
-                      </li>
-                    <% end %>
-                  </ul>
+                  <p>
+                  <strong>Dogs:</strong>
+                  <% @client.dogs.each do |dog| %>
+                    <%= "#{dog.name} #{dog.breed}"  %> 
+                  <% end %> 
+                  </p>
 
-                  <%= link_to 'Edit', edit_volunteer_path(@volunteer), class: "closeVolunteer" %> |
-                  <%= link_to 'Back', volunteers_path, class: "closeVolunteer"%>
+                  <%= link_to 'Edit', edit_client_path(@client), class: "closeClientShowModal" %> |
+                  <%= link_to 'Back', clients_path, class: "closeClientShowModal"%>
                 </div>
 
 
               </div>
               <div class="row">
                 <div class="col-sm-12">
-                  <button type="button" class="closeVolunteer btn btn-default">close</button>
+                  <button type="button" class="closeClientShowModal btn btn-default">close</button>
                 </div>
               </div>
             </div>
