clients, dogs, volunteers modals fixed

--- a/app/views/clients/_show.html.erb
+++ b/app/views/clients/_show.html.erb
@@ -11,7 +11,7 @@
                 </div>
               </div>
               <br />
-              <div class="row">
+              <div class="row content">
 
                 <div class="col-md-12">
                   <p id="notice"><%= notice %></p>
