--- a/app/views/dogs/show.js.erb
+++ b/app/views/dogs/show.js.erb
@@ -1,11 +1,10 @@
 $('body').append('<%= j render("show") %>');
-$("#volunteerShowModal").modal('show');
-$(".closeVolunteer").on("click", function() {
-  $("#volunteerShowModal").modal('hide');
+$("#dogShowModal").modal('show');
+$(".closeDogShowModal").on("click", function() {
+  $("#dogShowModal").modal('hide');
 });
 $('body').on('hidden.bs.modal', '.modal', function (e) {
   $(e.target).removeData('bs.modal');
   $('.modal').remove();
 });
-
 
