edit views modified to serve only one function depenes of model

--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -4,23 +4,25 @@
   <h3> <%= f.label "Dog details" %> </h3>
   <%= f.input :name %> 
   <%= f.input :chip_id %> 
-  <%= f.input :age %> 
+  <%= f.input :age, collection: 1..20 %> 
   <%= f.input :breed %> 
+  <%= f.input :sex, collection: ["F", "M"] %> 
+
+  <%# relics of the past %>
+
+  <%# <h3> <%= f.label "Client details" %1> </h3> %>
+  <%# <%= f.simple_fields_for :client do |c| %1> %>
+  <%#   <%= c.input :first_name %1> %> 
+  <%#   <%= c.input :last_name %1> %> 
+  <%#   <%= c.input :email %1> %> 
+  <%#   <%= c.input :phone1 %1> %> 
+  <%#   <%= c.input :phone2 %1> %> 
+  <%#   <%= c.input :institution, as: :radio_buttons %1> %> 
+  <%# <h3> <%= c.label "Location" %1> </h3> %>
+  <%# <%= render "application_partials/location_form", f: c  %1> %>
+  <%# <% end %1> %> 
 
 
-  <h3> <%= f.label "Client details" %> </h3>
-  <%= f.simple_fields_for :client do |c| %>
-    <%= c.input :first_name %> 
-    <%= c.input :last_name %> 
-    <%= c.input :email %> 
-    <%= c.input :phone1 %> 
-    <%= c.input :phone2 %> 
-    <%= c.input :institution, as: :radio_buttons %> 
-  <% end %> 
-
-
-  <%# <h3> <%= f.label "Location" %1> </h3> %>
-  <%# <%= render "application_partials/location_form", f: f  %1> %>
 
   <div class="form-group">
     <%= f.button :submit %>
