--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -9,7 +9,7 @@
       <th>Email</th>
       <th>Phone1</th>
       <th>Phone2</th>
-      <th>Address</th>
+      <th>Institution</th>
       <th colspan="2">Coordinates</th>
       <th colspan="3">Actions</th>
     </tr>
