Implemented modal for donations show view. Donations controller cleaned. Links fixed in edit, show Donations views.

--- a/app/views/business/donations/_form.html.erb
+++ b/app/views/business/donations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@business_donation) do |f| %>
+<%= simple_form_for [:business, @business_donation] do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
