--- a/app/views/business/donations/_form.html.erb
+++ b/app/views/business/donations/_form.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :amount %> 
 
 
-  <%= f.simple_fields_for :location do |c| %>
+  <%= f.simple_fields_for @donator do |c| %>
     <h3> <%= c.label "Donator Details" %> </h3>
     <%= c.input :first_name %> 
     <%= c.input :last_name %> 
@@ -14,8 +14,8 @@
     <%= c.input :phone1 %> 
     <%= c.input :phone2 %> 
     <%= c.input :institution, as: :radio_buttons %> 
-    <%# <h3> <%= c.label "Location" %1> </h3> %>
-    <%# <%= render "application_partials/location_form", f: c  %1> %>
+    <h3> <%= c.label "Location" %> </h3>
+    <%= render "application_partials/location_form", f: c  %>
   <% end %> 
 
   <div class="form-actions">
