View created for Donators#index action & small improvement done to styles.

--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -5,11 +5,11 @@
 <table class="table table-striped table-responsive table-hover">
   <thead>
     <tr>
-      <th>Transaction id:</th>
-      <th>Amount:</th>
-      <th>Donator:</th>
-      <th>Date:</th>
-      <th colspan="3">Actions:</th>
+      <th>Transaction id </th>
+      <th>Amount </th>
+      <th>Donator </th>
+      <th>Date </th>
+      <th colspan="3">Actions </th>
     </tr>
   </thead>
 
