--- a/app/views/business/donators/index.html.erb
+++ b/app/views/business/donators/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Business::Donators#index</h1>
-<p>Find me in app/views/business/donators/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<h1>Listing Business Donators</h1>
+
+<table class="table table-striped table-responsive table-hover">
+  <thead>
+    <tr>
+      <th>Full name </th>
+      <th>Email  </th>
+      <th>Phone </th>
+      <th>Institution </th>
+      <th colspan="3">Actions </th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @donators.each do |donator| %>
+      <tr>
+        <td> <%= donator.fullname %> </td>
+        <td> <%= donator.email %> </td>
+        <td> <%= donator.phone1 %> </td>
+        <td> <%= donator.institution %> </td>
+        <td>
+          <%= link_to 'Show', business_donator_path(donator), remote: true %> |
+          <%# <%= link_to 'destroy', business_donator_path(donator), method: :delete, data: { confirm: 'are you sure?' } %1> %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Donation', new_business_donation_path %>
