Donator show modal customized to present  donator details and his donations

--- a/app/views/business/donators/index.html.erb
+++ b/app/views/business/donators/index.html.erb
@@ -21,7 +21,7 @@
         <td> <%= donator.phone1 %> </td>
         <td> <%= donator.institution %> </td>
         <td>
-          <%= link_to 'Show', business_donator_path(donator), remote: true %> |
+          <%= link_to 'Show', business_donator_path(donator), remote: true %> 
           <%# <%= link_to 'destroy', business_donator_path(donator), method: :delete, data: { confirm: 'are you sure?' } %1> %>
         </td>
       </tr>
