--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -10,8 +10,8 @@
   <%= f.input :institution, as: :radio_buttons %> 
   <h3> <%= f.label "Location" %> </h3>
   <%= render "application_partials/location_form", f: f  %>
-  <%# <h3> <%= f.label "Dog details" %1> </h3> %>
-  <%# <%= render "application_partials/dog_form", f: f  %1> %>
+  <h3> <%= f.label "Dog details" %> </h3>
+  <%= render "application_partials/dog_form", f: f  %>
 
   <div class="form-group">
     <%= f.submit class: 'btn btn-default' %> 
