Side menu fixed and pre-styled. Logout link updated

--- a/app/assets/stylesheets/_partials.sass
+++ b/app/assets/stylesheets/_partials.sass
@@ -17,6 +17,12 @@ $yell-dark: #c9aa5f
 $yell-light: #ffd777
 $turq: #68dff0
 
+//breaks
+$xsmall: 575px
+$small: 767px
+$medium: 991px
+$large: 1199px
+
 // mixins
 =border-radius($radius: 1px) 
   -webkit-border-radius: $radius
