--- a/app/views/application_partials/_header.html.erb
+++ b/app/views/application_partials/_header.html.erb
@@ -149,7 +149,8 @@
       </div>
       <div class="top-menu">
       	<ul class="nav pull-right top-menu">
-              <li><a class="logout" href="login.html">Logout</a></li>
+          <li> <%= link_to "Logout", logout_path, class: 'logout' %> </li>
+              <%# <li><a class="logout" href="login.html">Logout</a></li> %>
       	</ul>
       </div>
   </header>
