--- a/app/views/application_partials/_asside.html.erb
+++ b/app/views/application_partials/_asside.html.erb
@@ -3,93 +3,69 @@
     <!-- sidebar menu start-->
     <ul class="sidebar-menu" id="nav-accordion">
 
-      <%# <p class="centered"><a href="profile.html"><img src="assets/logo-asside.png" class="img-circle" width="60"></a></p> %>
-      <%# <h5 class="centered">Navigation</h5> %>
+      <div id="side_accordion" class="sidebar-menu sub-menu">
+        <div class="panel">
+          <div class="panel-heading">
+            <a data-toggle="collapse" data-parent="#side_accordion" href="#dashboard_submenu"><i class="fa fa-desktop"></i>Dashboard</a> 
+          </div>
+          <div id="dashboard_submenu" class="panel-collapse collapse">
+            <ul class="sub">
+              <li><a  href="#">General</a></li>
+              <li><a  href="#">Buttons</a></li>
+              <li><a  href="#">Panels</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel">
+          <div class="panel-heading">
+            <a data-toggle="collapse" data-parent="#side_accordion" href="#volunteers_submenu"><i class="fa fa-users"></i>Volunteers</a> 
+          </div>
+          <div id="volunteers_submenu" class="panel-collapse collapse">
+            <ul class="sub">
+              <li> <%= link_to "All Volunteers", volunteers_path %> </li>
+              <li> <%= link_to "Groups", volunteers_groups_path %> </li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel">
+          <div class="panel-heading">
+            <a data-toggle="collapse" data-parent="#side_accordion" href="#dogs_submenu"><i class="fa fa-paw"></i>Dogs</a> 
+          </div>
+          <div id="dogs_submenu" class="panel-collapse collapse">
+            <ul class="sub">
+              <li> <%= link_to "All Dogs", dogs_path %> </li>
+              <li> <%= link_to "Dog Owners", clients_path %> </li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel">
+          <div class="panel-heading">
+            <a data-toggle="collapse" data-parent="#side_accordion" href="#business_submenu"><i class="fa fa-handshake-o"></i>Business</a> 
+          </div>
+          <div id="business_submenu" class="panel-collapse collapse">
+            <ul class="sub">
+              <li> <%= link_to "Donations", business_donations_path %> </li>
+              <li> <%= link_to "Donators", business_donators_path %> </li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel">
+          <div class="panel-heading">
+            <a data-toggle="collapse" data-parent="#side_accordion" href="#logs_submenu"><i class="fa fa-gears"></i>Settings</a> 
+          </div>
+          <div id="logs_submenu" class="panel-collapse collapse">
+            <ul class="sub">
 
-      <li class="mt">
-        <%= link_to "<i class='fa fa-dashboard'></i><span>Dashboard</span>".html_safe, users_path %> 
-        <%# <a href="index.html"> %>
-          <%#       <i class="fa fa-dashboard"></i> %>
-          <%#       <span>Dashboard</span> %>
-          <%#   </a> %>
-      </li>
+              <% if current_moderator.owner? %>
+                <li> <%= link_to "All Users", users_path %> </li>
+              <% end %> 
+            </ul>
+          </div>
+        </div>
+      </div> 
 
-      <li class="sub-menu">
-        <a href="javascript:;" >
-          <i class="fa fa-users"></i>
-          <span>Volunteers</span>
-        </a>
-        <ul class="sub">
-          <li> <%= link_to "All Volunteers", volunteers_path %> </li>
-          <li> <%= link_to "Groups", volunteers_groups_path %> </li>
-        </ul>
-      </li>
 
-      <li class="sub-menu">
-        <a href="javascript:;" >
-          <i class="fa fa-desktop"></i>
-          <span>UI Elements</span>
-        </a>
-        <ul class="sub">
-          <li><a  href="general.html">General</a></li>
-          <li><a  href="buttons.html">Buttons</a></li>
-          <li><a  href="panels.html">Panels</a></li>
-        </ul>
-      </li>
-
-      <li class="sub-menu">
-        <a href="javascript:;" >
-          <i class="fa fa-cogs"></i>
-          <span>Components</span>
-        </a>
-        <ul class="sub">
-          <li><a  href="calendar.html">Calendar</a></li>
-          <li><a  href="gallery.html">Gallery</a></li>
-          <li><a  href="todo_list.html">Todo List</a></li>
-        </ul>
-      </li>
-      <li class="sub-menu">
-        <a class="active" href="javascript:;" >
-          <i class="fa fa-book"></i>
-          <span>Extra Pages</span>
-        </a>
-        <ul class="sub">
-          <li class="active"><a  href="blank.html">Blank Page</a></li>
-          <li><a  href="login.html">Login</a></li>
-          <li><a  href="lock_screen.html">Lock Screen</a></li>
-        </ul>
-      </li>
-      <li class="sub-menu">
-        <a href="javascript:;" >
-          <i class="fa fa-tasks"></i>
-          <span>Forms</span>
-        </a>
-        <ul class="sub">
-          <li><a  href="form_component.html">Form Components</a></li>
-        </ul>
-      </li>
-      <li class="sub-menu">
-        <a href="javascript:;" >
-          <i class="fa fa-th"></i>
-          <span>Data Tables</span>
-        </a>
-        <ul class="sub">
-          <li><a  href="basic_table.html">Basic Table</a></li>
-          <li><a  href="responsive_table.html">Responsive Table</a></li>
-        </ul>
-      </li>
-      <li class="sub-menu">
-        <a href="javascript:;" >
-          <i class=" fa fa-bar-chart-o"></i>
-          <span>Charts</span>
-        </a>
-        <ul class="sub">
-          <li><a  href="morris.html">Morris</a></li>
-          <li><a  href="chartjs.html">Chartjs</a></li>
-        </ul>
-      </li>
-
+      <!-- sidebar menu end-->
     </ul>
-    <!-- sidebar menu end-->
   </div>
 </aside>
