Background login image for production added

--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -23,7 +23,7 @@
     </div>
     <!-- You can use an image of whatever size. This script will stretch to fit in any screen size.-->
     <script>
-      var bgimg = " <%= asset_path('assets/login-bg.jpg') %> "
+      var bgimg = " <%= asset_path('login-bg.jpg') %> "
       $.backstretch(bgimg, {speed: 500});
     </script>
   </body>
