Fullcallendar configuration in assets/javascript and assets/stylesheets

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -21,6 +21,7 @@
 @import gritter 
 @import style-theme
 @import style-responsive-theme 
+@import fullcalendar
 @import sessions
 @import clients 
 @import asside 
