--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,8 +1,8 @@
-<%= simple_form_for(@event) do |f| %>
+<%= simple_form_for @event, html: {class: 'form-horizontal'} do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-  </div>
+  <%= f.input :start, as: :datetime %> 
+  <%= f.input :end, as: :datetime %> 
 
   <div class="form-actions">
     <%= f.button :submit %>
