--- a/app/views/events/_new.html.erb
+++ b/app/views/events/_new.html.erb
@@ -15,16 +15,7 @@
                 <div class="col-md-12">
                   <p id="notice"><%= notice %></p>
                   <div id="event_date_range"></div>
-                  <%= simple_form_for @event, html: {class: 'form-horizontal'} do |f| %>
-                    <%= f.error_notification %>
-
-                    <%= f.input :start, as: :date %> 
-                    <%= f.input :end, as: :date %> 
-
-                    <div class="form-actions">
-                      <%= f.button :submit %>
-                    </div>
-                  <% end %>
+                  <%= render 'form' %> 
                 </div>
               </div>
               <div class="row">
