--- a/app/views/application_partials/_validation_errors.html.erb
+++ b/app/views/application_partials/_validation_errors.html.erb
@@ -1,4 +1,9 @@
-<% if object.errors.any? %>
+<jax({
+            url: event.update_url,
+            data: event_data,
+            type: 'PATCH'
+        });
+      },% if object.errors.any? %>
   <div class="validation_errors">
     <div> <%= pluralize(object.errors.count, "error") %> prohibited from being saved:  </div>
     <ul>
