Simple search in dog model created - dog_search partial added

--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Dogs</h1>
 
+<%= render "dog_search" %>
+
 <table class="table table-striped table-responsive table-hover">
   <thead>
     <tr>
