--- a/app/views/events/_new.html.erb
+++ b/app/views/events/_new.html.erb
@@ -17,6 +17,7 @@
                   <div id="event_date_range"></div>
                   <div id="date_picker"></div>
                   <%= render 'form' %> 
+                  <div id="result"></div>
                 </div>
               </div>
               <div class="row">
