Application.js manifest updated to use dependent-fields

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,15 +6,20 @@
   <%= f.input :end, as: :string, input_html: { class: "datepicker", id: "endTime" } %> 
 
 
+    <h3> <%= f.label "Custom Event" %> </h3>
 
-  <%= f.fields_for :custom_events do |custom_event| %>
+    <h3> <%= f.label "Traing Event" %> </h3>
 
+    <h3> <%= f.label "Transfer Event" %> </h3>
+
+    <h3> <%= f.label "Visit Event" %> </h3>
+
+  <%# <%= f.fields_for :custom_events do |custom_event| %1> %>
     <%# <h3> <%= f.label "Dog Details" %1> </h3> %>
     <%# <%= custom_event.fields_for :dogs  do |dog| %1> %> 
     <%#   <%= render "application_partials/dog_form", f: dog %1> %>
     <%# <% end %1> %>
-    
-  <% end %> 
+  <%# <% end %1> %> 
 
   <br />
   <%= f.button :submit %>
